refactor: remove unused useEventGroupPlans hook and replace with usePlanByRowId in EventsPage
feat: implement useEventGroupSelection hook for managing event selection and grouping

feat: add addEventsToGroupPlan function to handle adding events to group plans

refactor: simplify PaymentPlanDetailPage lifecycle and destructive actions rendering

feat: enhance EventGetService to include payment plan IDs in event DTOs

test: add EventTotalsTest to verify event totals and payment plan associations